# klangbild

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  cli.py  pyproject.toml  visualizer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  test.yml
audio/: __init__.py  analyzer.py  tags.py
config/: __init__.py  constants.py  layouts.py
encoding/: __init__.py  ffmpeg.py  worker.py
klangbild/: __main__.py  cli.py
klangbild/audio/: __init__.py  analyzer.py
klangbild/config/: __init__.py  constants.py  layouts.py
klangbild/encoding/: __init__.py  ffmpeg.py  worker.py
klangbild/render/: __init__.py  cover.py  frame.py
klangbild/utils/: __init__.py  colors.py  fonts.py  image.py  time.py
render/: __init__.py  cover.py  frame.py  gradient.py
tests/: conftest.py  test_cli.py  test_colors.py  test_cover.py  test_frame.py  test_image.py  test_layouts.py  test_main.py  test_tags.py  test_time.py
utils/: colors.py  image.py  time.py
website/: .gitignore  Dockerfile  README.md  biome.json  compose.yml  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
website/components/: DemosSection.vue  ExamplesSection.vue  FeaturesSection.vue  FooterSection.vue  HeroSection.vue  PlayerControl.vue  PreloaderOverlay.vue  QuickStartSection.vue  WaveBackground.vue
website/composables/: useGradientBrand.ts  useYouTubePlayer.ts
website/content/: demos.yml  examples.yml  features.yml  footer.yml  hero.yml  quickstart.yml
website/pages/: index.vue
(+4 files in other folders)
