[project]
name = "klangbild"
version = "0.1.0"
description = "4K audio visualizer for YouTube — waveform + cover image generator"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10",
    "numpy>=1.26",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "mutagen>=1.47",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
